@@ -2,8 +2,6 @@ package com.example.demo;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.http.MediaType;
@@ -12,7 +10,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
-@Controller
+@RestController
 @CrossOrigin(origins = "*")
 public class OrderController {
 
@@ -28,16 +26,19 @@ public class OrderController {
     private Map<String, String> otpStorage = new HashMap<>();
 
     @PostMapping("/send-otp")
-    @ResponseBody
     public String sendOtp(@RequestParam("phone") String phone) {
         String otp = String.valueOf((int) (Math.random() * 900000) + 100000);
         otpStorage.put(phone, otp);
+
         try {
             String message = "Your confirmation code for Herbal piles spray is " + otp;
-            String encodedMessage = URLEncoder.encode(message, StandardCharsets.UTF_8);
+            // Use .name() to satisfy the IntelliJ warning
+            String encodedMessage = URLEncoder.encode(message, StandardCharsets.UTF_8.name());
 
             String url = "https://api.sparrowsms.com/v2/sms/?token=" + SPARROW_TOKEN
-                    + "&from=" + SENDER_ID + "&to=" + phone + "&text=" + encodedMessage;
+                    + "&from=" + SENDER_ID
+                    + "&to=" + phone
+                    + "&text=" + encodedMessage;
 
             new RestTemplate().getForObject(url, String.class);
             return "OTP Sent";
@@ -47,53 +48,26 @@ public class OrderController {
     }
 
     @PostMapping("/verify-otp")
-    @ResponseBody
     public String verifyOtp(@RequestParam("phone") String phone, @RequestParam("otp") String otp) {
         if (otp.equals(otpStorage.get(phone))) return "verified";
         return "invalid";
     }
 
-    @PostMapping(value = "/order", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    @PostMapping(value = "/Order", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public String placeOrder(
             @RequestParam("name") String name,
             @RequestParam("phone") String phone,
             @RequestParam("address") String address,
             @RequestParam("province") String province,
             @RequestParam("package") String orderPackage,
-            @RequestParam("total") String total,
-            Model model
+            @RequestParam("total") String total
     ) {
         try {
-            // 1. Save to Google Sheets
             Order newOrder = new Order(name, phone, address, province, orderPackage, total);
             sheetsService.addOrderToSheet(newOrder);
-
-            // 2. Send Confirmation SMS to Customer
-            sendConfirmationSms(phone, name);
-
-            // 3. Prepare data for Meta Pixel (Purchase Event)
-            String numericTotal = total.replaceAll("[^0-9]", "");
-            model.addAttribute("purchaseValue", numericTotal);
-            model.addAttribute("currency", "NPR");
-
             return "success";
         } catch (Exception e) {
-            model.addAttribute("error", e.getMessage());
-            return "error";
-        }
-    }
-
-    private void sendConfirmationSms(String phone, String name) {
-        try {
-            String message = "नमस्ते " + name + ", तपाईंको अर्डर सफल भयो! हामी तपाईंलाई डेलिभरीको लागि चाँडै कल गर्नेछौं। धन्यवाद!";
-            String encodedMessage = URLEncoder.encode(message, StandardCharsets.UTF_8);
-
-            String url = "https://api.sparrowsms.com/v2/sms/?token=" + SPARROW_TOKEN
-                    + "&from=" + SENDER_ID + "&to=" + phone + "&text=" + encodedMessage;
-
-            new RestTemplate().getForObject(url, String.class);
-        } catch (Exception e) {
-            System.out.println("Confirmation SMS failed: " + e.getMessage());
+            return "failed: " + e.getMessage();
         }
     }
 }
